# silverton-dataops-solutions-example

./: .gitignore  f1  liquibase.properties
.github/workflows/: TeraJDBC__indep_indep.20.00.00.34.tar.tmp  action.yml
data_ops_blueprints_tdv_ddl/: dev.changelog.xml  prd.changelog.xml  pyproject.toml  uat.changelog.xml
data_ops_blueprints_tdv_ddl/config/DEV/: liquibase.properties
data_ops_blueprints_tdv_ddl/config/INT/: liquibase.properties
data_ops_blueprints_tdv_ddl/config/UAT/: liquibase.properties
data_ops_blueprints_tdv_ddl/tables/: BLUEPRINT_SAMPLE_TABLE_1.sql  BLUEPRINT_SAMPLE_TABLE_2.sql  BLUEPRINT_SAMPLE_TABLE_UAT.sql
data_ops_blueprints_tdv_ddl/views/: BLUEPRINT_SAMPLE_VIEW_1.sql  BLUEPRINT_SAMPLE_VIEW_2.sql
data_ops_blueprints_tdv_dml/: dev.changelog.xml  int.changelog.xml  pyproject.toml  uat.changelog.xml
data_ops_blueprints_tdv_dml/config/DEV/: liquibase.properties
data_ops_blueprints_tdv_dml/config/PRD/: liquibase.properties
data_ops_blueprints_tdv_dml/tables/: BLUE_PRINTS_SAMPLE_TABLE_1_DML.sql  BLUE_PRINTS_SAMPLE_TABLE_UAT_DML.sql
data_ops_stored_procedures/: dev.changelog.xml  int.changelog.xml  prd.changelog.xml  pyproject.toml
data_ops_stored_procedures/config/DEV/: liquibase.properties
data_ops_stored_procedures/config/QA/: liquibase.properties
data_ops_stored_procedures/tables/: BLUE_PRINTS_SAMPLE_RUN_SPROC_1.sql  BLUE_PRINTS_SAMPLE_SPROC_1.sql  BLUE_PRINTS_SAMPLE_SPROC_2.sql
